{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 99,
  "lineage": "332224e3-b1d2-f79f-7b9a-08081290d563",
  "resources": [
    {
      "module": "module.eks-cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:vpc/vpc-0ea25248f13abb681",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0207ca88f678cc3a9",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-3db5a45a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea25248f13abb681",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b4b1c394eef5ff53",
            "owner_id": "829282483222",
            "tags": {
              "Name": "test",
              "Template": "base vpc module"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:security-group/sg-04fa9226166afacf0",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-04fa9226166afacf0",
            "ingress": [],
            "name": "blue_eks-cluster-cluster-20240811040936366300000001",
            "name_prefix": "blue_eks-cluster-cluster-",
            "owner_id": "829282483222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blue_eks-cluster-cluster",
              "Template": "base eks_cluster module"
            },
            "tags_all": {
              "Name": "blue_eks-cluster-cluster",
              "Template": "base eks_cluster module"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.data.aws_vpc.vpc",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:network-acl/acl-056011c5adef93423",
            "default_network_acl_id": "acl-056011c5adef93423",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-056011c5adef93423",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "829282483222",
            "subnet_ids": [
              "subnet-00ae06381dfb2b388",
              "subnet-02a22d782497015ee",
              "subnet-03f4c3917fc4a57a7",
              "subnet-04f12f04048f0f556",
              "subnet-0532f5af618724699",
              "subnet-06d8e5668057f3ae7",
              "subnet-07e566d9c478f6858",
              "subnet-0bed0b4dc1d378eab",
              "subnet-0e5020a50f05c2ebe",
              "subnet-0fe8b384847b0e190"
            ],
            "tags": {
              "Name": "test-default",
              "Template": "base vpc module"
            },
            "tags_all": {
              "Name": "test-default",
              "Template": "base vpc module"
            },
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:route-table/rtb-0b4b1c394eef5ff53",
            "default_route_table_id": "rtb-0b4b1c394eef5ff53",
            "id": "rtb-0b4b1c394eef5ff53",
            "owner_id": "829282483222",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-default",
              "Template": "base vpc module"
            },
            "tags_all": {
              "Name": "test-default",
              "Template": "base vpc module"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:security-group/sg-0b383548b7b23d790",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b383548b7b23d790",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "829282483222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-default",
              "Template": "base vpc module"
            },
            "tags_all": {
              "Name": "test-default",
              "Template": "base vpc module"
            },
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e4a40aca5cf8e42",
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:elastic-ip/eipalloc-08e4a40aca5cf8e42",
            "association_id": "eipassoc-03406f896a24bb9ae",
            "domain": "vpc",
            "id": "eipalloc-08e4a40aca5cf8e42",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-00bfd2fd3deed604e",
            "private_dns": "ip-10-0-1-48.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.48",
            "public_dns": "ec2-18-136-187-4.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.187.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-ap-southeast-1a",
              "Template": "base vpc module"
            },
            "tags_all": {
              "Name": "test-ap-southeast-1a",
              "Template": "base vpc module"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:internet-gateway/igw-0f90411e48b89639e",
            "id": "igw-0f90411e48b89639e",
            "owner_id": "829282483222",
            "tags": {
              "Name": "test",
              "Template": "base vpc module"
            },
            "tags_all": {
              "Name": "test",
              "Template": "base vpc module"
            },
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e4a40aca5cf8e42",
            "association_id": "eipassoc-03406f896a24bb9ae",
            "connectivity_type": "public",
            "id": "nat-0b614e51fba81bd53",
            "network_interface_id": "eni-00bfd2fd3deed604e",
            "private_ip": "10.0.1.48",
            "public_ip": "18.136.187.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e5020a50f05c2ebe",
            "tags": {
              "Name": "test-ap-southeast-1a",
              "Template": "base vpc module"
            },
            "tags_all": {
              "Name": "test-ap-southeast-1a",
              "Template": "base vpc module"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bda428c0947da0e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b614e51fba81bd53",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bda428c0947da0e8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f90411e48b89639e",
            "id": "r-rtb-0fc01ac2f860d1b9b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc01ac2f860d1b9b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:route-table/rtb-0bda428c0947da0e8",
            "id": "rtb-0bda428c0947da0e8",
            "owner_id": "829282483222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b614e51fba81bd53",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-private",
              "Template": "base vpc module"
            },
            "tags_all": {
              "Name": "test-private",
              "Template": "base vpc module"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:route-table/rtb-0fc01ac2f860d1b9b",
            "id": "rtb-0fc01ac2f860d1b9b",
            "owner_id": "829282483222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f90411e48b89639e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-public",
              "Template": "base vpc module"
            },
            "tags_all": {
              "Name": "test-public",
              "Template": "base vpc module"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fec68aa9db9a0d1",
            "route_table_id": "rtb-0bda428c0947da0e8",
            "subnet_id": "subnet-00ae06381dfb2b388"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2f6f9faa9f4ed4f",
            "route_table_id": "rtb-0bda428c0947da0e8",
            "subnet_id": "subnet-04f12f04048f0f556"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bce7b801a7b8b3a",
            "route_table_id": "rtb-0bda428c0947da0e8",
            "subnet_id": "subnet-02a22d782497015ee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0110d48f79796e146",
            "route_table_id": "rtb-0bda428c0947da0e8",
            "subnet_id": "subnet-0bed0b4dc1d378eab"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086832632d47658b9",
            "route_table_id": "rtb-0bda428c0947da0e8",
            "subnet_id": "subnet-0532f5af618724699"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f81d42a51431c038",
            "route_table_id": "rtb-0fc01ac2f860d1b9b",
            "subnet_id": "subnet-0e5020a50f05c2ebe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077cd3afbd4c7690f",
            "route_table_id": "rtb-0fc01ac2f860d1b9b",
            "subnet_id": "subnet-03f4c3917fc4a57a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:subnet/subnet-00ae06381dfb2b388",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ae06381dfb2b388",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829282483222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-db-ap-southeast-1a",
              "Template": "base vpc module"
            },
            "tags_all": {
              "Name": "test-db-ap-southeast-1a",
              "Template": "base vpc module"
            },
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:subnet/subnet-04f12f04048f0f556",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f12f04048f0f556",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829282483222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-db-ap-southeast-1b",
              "Template": "base vpc module"
            },
            "tags_all": {
              "Name": "test-db-ap-southeast-1b",
              "Template": "base vpc module"
            },
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:subnet/subnet-02a22d782497015ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a22d782497015ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829282483222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-db-ap-southeast-1c",
              "Template": "base vpc module"
            },
            "tags_all": {
              "Name": "test-db-ap-southeast-1c",
              "Template": "base vpc module"
            },
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:subnet/subnet-0bed0b4dc1d378eab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bed0b4dc1d378eab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829282483222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-ap-southeast-1a",
              "Template": "base vpc module",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "test-private-ap-southeast-1a",
              "Template": "base vpc module",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:subnet/subnet-0532f5af618724699",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0532f5af618724699",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829282483222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-ap-southeast-1b",
              "Template": "base vpc module",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "test-private-ap-southeast-1b",
              "Template": "base vpc module",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:subnet/subnet-0e5020a50f05c2ebe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5020a50f05c2ebe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829282483222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-ap-southeast-1a",
              "Template": "base vpc module",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "test-public-ap-southeast-1a",
              "Template": "base vpc module",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:subnet/subnet-03f4c3917fc4a57a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f4c3917fc4a57a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829282483222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-ap-southeast-1b",
              "Template": "base vpc module",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "test-public-ap-southeast-1b",
              "Template": "base vpc module",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ea25248f13abb681"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:vpc/vpc-0ea25248f13abb681",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056011c5adef93423",
            "default_route_table_id": "rtb-0b4b1c394eef5ff53",
            "default_security_group_id": "sg-0b383548b7b23d790",
            "dhcp_options_id": "dopt-3db5a45a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea25248f13abb681",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4b1c394eef5ff53",
            "owner_id": "829282483222",
            "tags": {
              "Name": "test",
              "Template": "base vpc module"
            },
            "tags_all": {
              "Name": "test",
              "Template": "base vpc module"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}